Add CleanerJava6 coverage test for netty-common